# staff-planning

./: .gitlab-ci.yml  Dockerfile  docker_build.sh  docker_run.sh  liquibase.sh  pyproject.toml
app/src/: main.py
app/src/config/: database.py  logs.py
app/src/domain/aircraft/: model.py  repository.py
app/src/domain/airline/: model.py  repository.py
app/src/domain/airport/: model.py  repository.py
app/src/domain/arr_dep/: model.py  repository.py
app/src/domain/color/: model.py  repository.py
app/src/domain/country/: model.py  repository.py
app/src/domain/flight/: model.py  repository.py
app/src/domain/flight_plan/: model.py  repository.py
app/src/domain/flight_to_flight_plan/: model.py  repository.py
app/src/domain/flight_with_flight_plan/: model.py  repository.py
app/src/domain/int_dom/: model.py  repository.py
app/src/domain/schedule/: model.py  repository.py
app/src/domain/service_type/: model.py  repository.py
app/src/domain/task/: model.py  repository.py
app/test/: test_example.py
db/: master.xml
db/changelog/: 1.0-init.xml
db/changelog/data/init/: staff_planning_public_aircraft.csv  staff_planning_public_airline.csv  staff_planning_public_airport.csv  staff_planning_public_arr_dep.csv  staff_planning_public_color.csv  staff_planning_public_country.csv  staff_planning_public_flight.csv  staff_planning_public_flight_plan.csv  staff_planning_public_flight_to_flight_plan.csv  staff_planning_public_int_dom.csv  staff_planning_public_schedule.csv  staff_planning_public_service_type.csv  staff_planning_public_task.csv
