[tool.poetry]
name = "staff-planning"
version = "0.1.0"
description = ""
authors = ["Oleksandr Sidko <a.sidko@idev-hub.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
pytest = "^6.2.2"
passlib = "^1.7.4"
python-jose = "^3.2.0"
python-multipart = "^0.0.5"
postgres = "^3.0.0"
bcrypt = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
